# tyger-lang

./: CMakeLists.txt  README.md  build.sh
code/: foo.c  lexer.c  main.c  parser.c  trace.c  tstrings.c
includes/: ast.h  containers.h  foo.h  lexer.h  lexer_internal.h  parser.h  parser_internal.h  trace.h  trace_internal.h  tstrings.h
scripts/: lexer_tc_gen.py  prog.tyger
tests/: parser_test_util.hpp  test_foo.cpp  test_lexer.cpp  test_parser.cpp  test_string_view.cpp  test_trace.cpp
